style.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Raleway:ital,wght@0,500;1,500&family=Staatliches&display=swap');

body {
    --textColor: #1e1e1e;

    margin: 0;
    color: var(--textColor);
    font-family: "Raleway", sans-serif;
    letter-spacing: 0.15em;
}

main {
    height: 100vh;
    display: flex;
    flex-flow: column;
}

#input {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;

    flex-grow: 1;
    background-color: #ec5656;
    z-index: 1;
    box-shadow: #00000030 0px 5px 29px 0px;
}

#macIn {
    text-align: center;
    padding: 0.75em;
    font-size: min(5vw, 2rem);
    border-radius: 0.15em;
    box-shadow: #00000030 0px 5px 29px 0px;
}

#output {
    overflow: hidden;
    transition: 0.2s;
    transition-timing-function: ease-in-out;

    display: grid;
}

@media (orientation: portrait) {
    #output {
        height: 75vh;
        grid-template-rows: 1fr 1fr;
    }
}

@media (orientation: landscape) {
    #output {
        height: 50vh;
        grid-template-columns: 1fr 1fr;
    }
}

#output[hidden] {
    height: 0;
}

#formatOut {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-flow: column;
    background-color: #f4f9fc;
}

#toggleCase {
    text-transform: lowercase;
    font-style: italic;
    text-decoration: underline;
    cursor: pointer;
}

#formatGroups {
    display: flex;
    flex-flow: row;
}

#vendorOutWrapper {
    display: flex;
    align-items: center;
    justify-content: center;
}

#vendorOut {
    font-family: "Staatliches", sans-serif;
    font-size: min(10vw, 5rem);
    font-weight: 800;
    text-align: right;
    letter-spacing: 0.1em;
    
    margin: 0;
    padding: 0 1.4em;

    transition-delay: 1s;
    transition: transform 0.4s;
    transition-timing-function: cubic-bezier(0.8, 0.1, 0.25, 1.0);
}

#vendorOut:empty {
    transform: translateY(50vh);
}

footer {
    display: flex;
    align-items: center;
    justify-content: center;

    height: 25vh;
    background-color: #81effd;
}

footer > p {
    text-align: center;
    line-height: 2.5em;
    margin: 0;
}

.mac {
    font-family: "JetBrains Mono", monospace;
    text-transform: lowercase;
    letter-spacing: 0.1em;
}

.formatGroup {
    display: flex;
    flex-flow: column;
    margin: 0 1em;
}

.formatGroup > input[type="text"] {
    padding: 0.25em;
    background-color: transparent;
    border-bottom: 1px solid var(--textColor);
    font-size: 1rem;
    margin-top: 1em;
}

.hide {
    display: none;
}

a {
    color: inherit;
    font-style: italic;
}

input {
    border: none;
}

input:focus {
    outline: none;
}

